--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -18,4 +18,4 @@
 {% if site.owner.twitter %}<a href="https://scholar.google.com.sg/citations?user=2R-cOkYAAAAJ&hl=en&inst=13660462560571941651" class="author-social" target="_blank"><i class="fa fa-twitter-square"></i> Twitter</a>{% endif %}
 {% if site.owner.stackoverflow %}<a href="http://stackoverflow.com/users/{{ site.owner.stackoverflow }}" class="author-social" target="_blank"><i class="fa fa-stack-overflow"></i> Stackoverflow</a>{% endif %}
 {% if site.owner.steam %}<a href="http://steamcommunity.com/id/{{ site.owner.steam }}" class="author-social" target="_blank"><i class="fa fa-steam-square"></i> Steam</a>{% endif %}
-{% if site.owner.cv %}<a href="{{ site.url }}/files/{{site.owner.cv}}" class="author-social" target="_blank"><i class="fa fa-file"></i>&nbsp; Detailed CV</a>
+{% if site.owner.cv %}<a href="{{ site.url }}/files/{{site.owner.cv}}" class="author-social" target="_blank"><i class="fa fa-file"></i>&nbsp; Detailed CV</a>{% endif %}
