--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -5,7 +5,7 @@
 {% else %}
 	<img src="{{ site.url }}/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo"></a>
 {% endif %}
-<h3>{{ site.owner.name }}</h3>
+<h3>Cong Qianhao （从乾昊）</h3>
 <p>{{ site.owner.bio }}</p>
 
 <a href="https://en.wikipedia.org/wiki/Singapore" class="author-social" target="_blank"><i class="fa fa-location-arrow"></i> Singapore</a>
