--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -15,7 +15,7 @@
 <a href="https://dblp.org/pid/289/0180.html" class="author-social" target="_blank"><i class="fa fa-xing"></i>&nbsp; DBLP</a>
 {% if site.owner.linkedin %}<a href="http://linkedin.com/in/{{ site.owner.linkedin }}" class="author-social" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a>{% endif %}
 {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" class="author-social" target="_blank"><i class="fa fa-github-square"></i> Github</a>{% endif %}
-{% if site.owner.twitter %}<a href="https://scholar.google.com.sg/citations?user=2R-cOkYAAAAJ&hl=en&inst=13660462560571941651" class="author-social" target="_blank"><i class="fa fa-twitter-square"></i> Twitter</a>{% endif %}
+{% if site.owner.twitter %}<a href="https://twitter.com/{{site.owner.twitter}}" class="author-social" target="_blank"><i class="fa fa-twitter-square"></i> Twitter</a>{% endif %}
 {% if site.owner.stackoverflow %}<a href="http://stackoverflow.com/users/{{ site.owner.stackoverflow }}" class="author-social" target="_blank"><i class="fa fa-stack-overflow"></i> Stackoverflow</a>{% endif %}
 {% if site.owner.steam %}<a href="http://steamcommunity.com/id/{{ site.owner.steam }}" class="author-social" target="_blank"><i class="fa fa-steam-square"></i> Steam</a>{% endif %}
 {% if site.owner.cv %}<a href="{{ site.url }}/files/{{site.owner.cv}}" class="author-social" target="_blank"><i class="fa fa-file"></i>&nbsp; Detailed CV</a>{% endif %}
