--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -5,6 +5,8 @@
 {% else %}
 	<img src="{{ site.url }}/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo"></a>
 {% endif %}
+
+{% if page.url contains 'zh-CN' %}
 <h3>Cong Qianhao （从乾昊）</h3>
 <p>{{ site.owner.bio }}</p>
 
@@ -19,3 +21,22 @@
 {% if site.owner.stackoverflow %}<a href="http://stackoverflow.com/users/{{ site.owner.stackoverflow }}" class="author-social" target="_blank"><i class="fa fa-stack-overflow"></i> Stackoverflow</a>{% endif %}
 {% if site.owner.steam %}<a href="http://steamcommunity.com/id/{{ site.owner.steam }}" class="author-social" target="_blank"><i class="fa fa-steam-square"></i> Steam</a>{% endif %}
 {% if site.owner.cv %}<a href="{{ site.url }}/files/{{site.owner.cv}}" class="author-social" target="_blank"><i class="fa fa-file"></i>&nbsp; Detailed CV</a>{% endif %}
+
+{% else %}
+
+<h3> 从乾昊 </h3>
+<p>{{ site.owner.bio }}</p>
+
+<a href="https://baike.baidu.com/item/%E6%96%B0%E5%8A%A0%E5%9D%A1" class="author-social" target="_blank"><i class="fa fa-location-arrow"></i> 新加坡 </a>
+
+{% if site.owner.email %}<a href="mailto:{{ site.owner.email }}" class="author-social" target="_blank"><i class="fa fa-envelope-square"></i> 电子邮箱 </a>{% endif %}
+{% if site.owner.google_scholar %}<a href="http://scholar.google.es/citations?user={{ site.owner.google_scholar }}" class="author-social" target="_blank"><i class="ai ai-google-scholar-square"></i>&nbsp; 谷歌学术 </a>{% endif %}
+<a href="https://dblp.org/pid/289/0180.html" class="author-social" target="_blank"><i class="fa fa-xing"></i>&nbsp; DBLP</a>
+{% if site.owner.linkedin %}<a href="http://linkedin.com/in/{{ site.owner.linkedin }}" class="author-social" target="_blank"><i class="fa fa-linkedin-square"></i> 领英 </a>{% endif %}
+{% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" class="author-social" target="_blank"><i class="fa fa-github-square"></i> Github </a>{% endif %}
+{% if site.owner.twitter %}<a href="https://twitter.com/{{site.owner.twitter}}" class="author-social" target="_blank"><i class="fa fa-twitter-square"></i> Twitter </a>{% endif %}
+{% if site.owner.stackoverflow %}<a href="http://stackoverflow.com/users/{{ site.owner.stackoverflow }}" class="author-social" target="_blank"><i class="fa fa-stack-overflow"></i> Stackoverflow</a>{% endif %}
+{% if site.owner.steam %}<a href="http://steamcommunity.com/id/{{ site.owner.steam }}" class="author-social" target="_blank"><i class="fa fa-steam-square"></i> Steam </a>{% endif %}
+{% if site.owner.cv %}<a href="{{ site.url }}/files/{{site.owner.cv}}" class="author-social" target="_blank"><i class="fa fa-file"></i>&nbsp; Detailed CV </a>{% endif %}
+
+{% endif %}
